# cameradar

./: .clang-format  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  Gopkg.toml  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  README_RU.md  SECURITY.md  attack.go  attack_test.go  cameradar.go  cameradar_test.go  cmrdr.go  curl.go  curl_test.go  discover.go  discover_test.go  glide.yaml  go.mod  go.sum  helpers.go  helpers_test.go  loaders.go  loaders_test.go  models.go  progress.go  scan.go  scan_test.go  scanner.go  scanner_test.go  (+9 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: gh-actions.instructions.md  go.instructions.md  markdown.instructions.md
.github/workflows/: build.yaml  docker-publish.yml  release.yaml  test.yaml
cache_managers/: CMakeLists.txt
cache_managers/dumb_cache_manager/: CMakeLists.txt
cache_managers/dumb_cache_manager/include/: dumb_cache_manager.h
cache_managers/dumb_cache_manager/src/: dumb_cache_manager.cpp
cache_managers/mysql_cache_manager/: CMakeLists.txt
cache_managers/mysql_cache_manager/include/: db_conn.h  mysql_cache_manager.h  query_result.h
cache_managers/mysql_cache_manager/src/: db_conn.cpp  mysql_cache_manager.cpp
cameraccess/: main.go
cameradar/: attack.go  cameradar.go  data.go  discover.go  helpers.go  loaders.go  models.go  output.go
cameradar_standalone/: CMakeLists.txt
cameradar_standalone/conf/: cameradar.conf.json  url.json
cameradar_standalone/include/: cachemanager.h  cameradar_task.h  configuration.h  describe.h  dispatcher.h  encode.h  fmt.h  fs.h  launch_command.h  logger.h  opt_parse.h  rtsp_path.h  signal_handler.h  stream_model.h  tinystr.h  tinyxml.h
cameradar_standalone/include/spdlog/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h
cameradar_standalone/include/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  format.cc  format.h  line_logger.h
cameradar_standalone/include/spdlog/sinks/: android_sink.h  base_sink.h  dist_sink.h  file_sinks.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  syslog_sink.h
cameradar_standalone/include/tasks/: brutelogs.h  brutepath.h  creds_attack.h  mapping.h  parsing.h  path_attack.h  print.h  stream_check.h  thumbnail.h
cameradar_standalone/src/: cachemanager.cpp  configuration.cpp  describe.cpp  dispatcher.cpp  encode.cpp  fs.cpp  launch_command.cpp  main.cpp  opt_parse.cpp  rtsp_path.cpp  signal_handler.cpp  stream_model.cpp  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
cameradar_standalone/src/tasks/: brutelogs.cpp  brutepath.cpp  creds_attack.cpp  mapping.cpp  parsing.cpp  path_attack.cpp  print.cpp  stream_check.cpp  thumbnail.cpp
cmake/: boost.cmake  find_sources.cmake  jsoncpp.cmake  mysql_connector.cmake
cmd/cameradar/: cameradar.go  main.go  version.go
deployment/: Dockerfile  build_last_package.sh  docker-compose.yml  docker-entrypoint.sh  env_file  run.sh
deployment/conf/: cameradar.conf.json  cameradar.tmpl.conf.json  url.json
dictionaries/: credentials.json  routes
examples/: target_file_example
gui/: .gitignore  README.md  bsconfig.json  package.json
gui/electron_app/: index.js
gui/public/: index.html
gui/src/: MainWindow.css  MainWindow.re  Utils.re  index.re
internal/attack/: attacker.go  attacker_test.go  detect_auth.go  detect_auth_test.go  incremental.go  incremental_test.go  rtsp.go  rtsp_probe_internal_test.go  rtsp_statusline_internal_test.go  rtsp_test.go  rtsp_timeout_internal_test.go  rtsp_url_test.go  workers.go  workers_test.go
internal/dict/: embed.go  loader.go  loader_test.go
internal/dict/assets/: routes
internal/output/: m3u.go  m3u_test.go
internal/scan/: builder.go  builder_test.go  targets.go  targets_test.go
internal/scan/masscan/: scanner.go  scanner_test.go
internal/scan/nmap/: scanner.go  scanner_test.go
internal/scan/skip/: skip.go  skip_test.go
internal/ui/: build.go  build_test.go  clamp_test.go  noop.go  plain.go  plain_test.go  reporter.go  reporter_test.go  state.go  state_test.go  style.go  summary.go  summary_test.go  tui.go
pkg/ports/: ports.go  ports_test.go
server/: main.go
server/actor/: pubsub.go  server.go
server/actor/pubsub/: mock.go  webSocket.go
server/actor/server/: mock.go  webSocket.go
server/adaptor/: websocket.go  websocketFactory.go
server/adaptor/jsonrpc2/: jsonrpc2.go
server/adaptor/websocket/: factoryMock.go  gorilla.go  gorillaFactory.go  mock.go
server/service/: handler.go  service.go
test/: Dockerfile  Dockerfile-camera  build_last_package.sh  camera_emulation_server  etix_rtsp_server  run.sh  test.sh
test/conf/: cameradar.conf.json  cameratest.conf.json  ids.json
test/docker/: cameratest.conf.tmpl.json  gen_cameras.sh  run_cameradartest.sh  run_ces.sh  run_vlc.sh
test/src/: configuration.go  db.go  dropDB.go  getResult.go  log.go  logReader.go  main.go  manager.go  result.go  service.go  testCase.go  tester.go  writeResult.go
tools/automatic_route_dictionary_updater/: main.go
tools/dictionary_updater/: main.go
tools/xplatform-docker-build/: go.mod  go.sum  magefile.go
